syntax = "proto2";
package msg;
import "chat.core.types.proto";

// SystemGetPublicKeys
// @Function
// @Return: SystemPublicKeys
message SystemGetPublicKeys {
}

// SystemGetDHGroups
// @Function
// @Return: SystemDHGroups
message SystemGetDHGroups {
}

// SystemGetServerTime
// @Function
// @Returns: SystemServerTime
message SystemGetServerTime {
}

// SystemServerTime
message SystemServerTime {
    required int64 Timestamp = 1; // In Seconds
}

// SystemPublicKeys
message SystemPublicKeys {
    repeated RSAPublicKey RSAPublicKeys = 1;
}

// SystemDHGroups
message SystemDHGroups {
    repeated DHGroup DHGroups = 1;
}